fix z-index on sidebar and navigation

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -15,6 +15,7 @@
   background-color: #3a3a3a;
   padding: 0 15px;
   height: 46px;
+  z-index: 2;
 
   .nav {
     padding: 15px;
