--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -59,7 +59,7 @@
       display: block;
       padding-top: 50px;
       width: 100%;
-      z-index: -1;
+      z-index: 1;
 
       .gong-sidebar-content {
         overflow: hidden;
